tests/ui/rename/test_rename_path.stderr
error: unexpected meta-item format `Path`, expected `List`
 --> $DIR/test_rename_path.rs:5:17
  |
5 |     #[shorthand(rename)]
  |                 ^^^^^^
